<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rezervacijafudbalskihtermina.LoggedIn"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggedIn"
        android:textSize="50dp"
        android:textAlignment="center" />


    <Button
        android:id="@+id/povratakkuci"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:text="@string/povratakuci"
        android:background="@color/holo_orange_dark"
        android:textSize="20dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/odjava"
        android:background="@color/holo_orange_dark"
        android:textSize="20dp"
        android:layout_gravity="center"/>


</androidx.appcompat.widget.LinearLayoutCompat>